# vtracer-mac-native

./: .gitignore  README.md  build_app.command
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  main.js  style.css
